--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Hello World Git!</h1>
     <input id="name" placeholder="Digite o seu nome: " />
     <button onclick="helloWorld()">Hello World</button>
+    <button onclick="clearButton()"> Limpar</button>
     <p id="message"></p>
     <script src="hello-world.js"></script>
 </body>
